tests/snapshots/snapshots/snapshots__snapshots__cli_output__create_help.snap
---
source: tests/snapshots/cli_output.rs
expression: normalize_output(&output.stdout)
---
Create a new issue

Usage: obr create [OPTIONS] [TITLE]

Arguments:
  [TITLE]
          Issue title

Options:
      --title <TITLE_FLAG>
          Issue title (alternative to positional argument)

  -t, --type <TYPE>
          Issue type (task, bug, feature, etc.)

      --slug <SLUG>
          ID-REDACTED slug embedded in the generated ID. Example: `--slug ID-REDACTED` produces an ID of the form `ID-REDACTED-<hash>`, keeping the configured prefix and the uniquifying hash suffix. The slug is normalized to lowercase ASCII alphanumeric + single hyphens (runs of other characters collapse to one hyphen, leading/trailing hyphens are stripped, length is capped at 48 characters after normalization)

  -p, --priority <PRIORITY>
          Priority (0-4 or P0-P4)

  -d, --description <DESCRIPTION>
          Description

          [alias: --body]

      --ID-REDACTED <PATH>
          Read the issue description verbatim from a file (or `-` for stdin).

          The entire file content is used as the description, unchanged from disk — unlike the bulk `-f/--file` markdown import, which only captures the first paragraph after each `## Title` heading. Use this for ID-REDACTED / markdown descriptions (lists, fenced code) that are fragile to pass through shell quoting on `-d/--description`. Mutually exclusive with `-d/--description`.

  -a, --assignee <ASSIGNEE>
          Assign to person

      --owner <OWNER>
          Set owner email

  -l, --labels <LABELS>
          Labels (ID-REDACTED)

      --parent <PARENT>
          Parent issue ID (creates ID-REDACTED dep)

      --deps <DEPS>
          Dependencies (format: type:id,type:id)

  -e, --estimate <ESTIMATE>
          Time estimate in minutes

      --due <DUE>
          Due date (RFC3339 or relative)

      --defer <DEFER>
          Defer until date (RFC3339 or relative)

      --ID-REDACTED <EXTERNAL_REF>
          External reference

      --ephemeral
          Mark as ephemeral (not exported to JSONL)

  -s, --status <STATUS>
          Initial status (open, deferred, in_progress, closed)

      --ID-REDACTED <ACCEPTANCE_CRITERIA>
          Acceptance criteria recorded on the initial issue (beads_rust#408)

          [alias: --acceptance]

      --ID-REDACTED <AGENT_CONTEXT>
          Set the initial `agent_context` ID-REDACTED JSON (beads_rust#408).

          Accepts the same forms as `obr update --ID-REDACTED`: inline JSON, `@path/to/file.json`, or `@path/to/file.yaml` (normalized to JSON). An empty string leaves the field unset. Invalid context is rejected before any issue, event, or JSONL record is created.

      --ID-REDACTED
          Preview without creating

      --silent
          Output only issue ID

  -f, --file <FILE>
          Create issues from a markdown file (bulk import)

      --ID-REDACTED <NAME>
          Tier 1 attribution: agent name (env: OBR_AGENT_NAME). Recorded only

          [env: OBR_AGENT_NAME=]

      --harness <HARNESS>
          Tier 1 attribution: harness identifier (env: OBR_HARNESS). Recorded only

          [env: OBR_HARNESS=]

      --model <MODEL>
          Tier 1 attribution: model identifier (env: OBR_MODEL). Recorded only

          [env: OBR_MODEL=]

      --db <DB>
          Database path (ID-REDACTED .obr/*.db if not set)

      --actor <ACTOR>
          Actor name for audit trail

      --json
          Output as JSON

      --ID-REDACTED
          Force direct mode (no daemon) - effectively no-op in obr v1

      --ID-REDACTED
          Skip auto JSONL export

      --ID-REDACTED
          Skip auto import check

      --ID-REDACTED
          Allow stale DB (bypass freshness check warning)

      --ID-REDACTED <LOCK_TIMEOUT>
          `SQLite` busy/ID-REDACTED timeout in ms

      --no-db
          ID-REDACTED mode (no DB connection)

  -v, --verbose...
          Increase logging verbosity (-v, -vv)

  -q, --quiet
          Quiet mode (no output except errors)

      --ID-REDACTED
          Disable colored output

  -h, --help
          Print help (see a summary with '-h')
